Call app "Puzzles", not "SGT Puzzles"

--- a/sgt-puzzles.desktop
+++ b/sgt-puzzles.desktop
@@ -1,5 +1,5 @@
 [Desktop Entry]
-Name[]=SGT Puzzles
+Name[]=Puzzles
 Comment[]=Simon Tatham\'s Portable Puzzle Collection
 Exec=sgt-puzzles
 Terminal=false
